--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,7 +13,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" routerLink="/login" routerLinkActive="active">Product</a>
+                  <a class="nav-link" >Product</a>
               </li>
 
                 <li class="nav-item">
@@ -35,11 +35,10 @@
                         </button>
                     </div>
                 </div>
-                <!-- <a class="btn btn-success btn-sm ml-3" href="cart.html">
-                    <i class="fa fa-shopping-cart"></i> Cart
-                    <span class="badge badge-light">10</span>
-                </a> -->
+                
             </form>
+            <div><a class="btn btn-success btn-sm ml-3" routerLink="/login" routerLinkActive="active"> Login</a> 
+            <a class="btn btn-success btn-sm ml-3" routerLink="/createCustomer" routerLinkActive="active"> Sign Up</a> </div>
         </div>
     </div>
 </nav>
