--- a/src/app/components/start/home/home.component.html
+++ b/src/app/components/start/home/home.component.html
@@ -1,14 +1,59 @@
 <app-header></app-header>
-<div *ngFor="let pho of item">
-    <img [src]="pho.itemsPicture" width="640" height="360" >
+<div *ngFor="let pho of item ">
     <p>{{pho.id}}</p>
+
+
+    
     <p>{{pho.itemsName}}</p>
     <p>{{pho.price}}</p>
-    
-    
-    
-
   </div>
-   
 
+
+
+  <div class="wrap-slick2">
+      <div class="slick2">
+
+        <div class="item-slick2 p-l-15 p-r-15">
+          <!-- Block2 -->
+          <div class="block2">
+            <div class="block2-img wrap-pic-w of-hidden pos-relative block2-labelsale">
+
+              <div *ngFor="let pho of item">
+                  <img src="data:image/png;base64,{{pho.itemsPicture}}" width="230px" height="300">
+
+              <div class="block2-overlay trans-0-4">
+                <a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
+                  <i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
+                  <i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
+                </a>
+
+                <div class="block2-btn-addcart w-size1 trans-0-4">
+                  <!-- Button -->
+                  <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="block2-txt p-t-20">
+              <!-- <a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+                Frayed denim shorts
+              </a> -->
+
+              <span class="block2-oldprice m-text7 p-r-5">
+                $29.50
+              </span>
+
+              <span class="block2-newprice m-text8 p-r-5">
+                $15.90
+              </span>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+   
 <!-- <app-footer></app-footer> -->
