--- a/src/app/components/start/home/home.component.css
+++ b/src/app/components/start/home/home.component.css
@@ -1,175 +1,148 @@
-  
-  ul, li {
-      margin: 0px;
-      list-style-type: none;
-  }
-  
-  button {
-      border: none;
-      background: transparent;
-  }
-  
-  button:hover {
-      cursor: pointer;
-  }
-  .container-menu-header {
-    width: 100%;
-    top: 0;
-    left: 0;
-    position: fixed;
-    z-index: 1100;
-    box-shadow: 0 1px 5px 0px rgba(0,0,0,0.2);
-    -moz-box-shadow: 0 1px 5px 0px rgba(0,0,0,0.2);
-    -webkit-box-shadow: 0 1px 5px 0px rgba(0,0,0,0.2);
-    -o-box-shadow: 0 1px 5px 0px rgba(0,0,0,0.2);
-    -ms-box-shadow: 0 1px 5px 0px rgba(0,0,0,0.2); 
-  }
-  .wrap_header {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    height: 80px;
-    background-color: white;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    -webkit-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
-  }
-  .logo {
-    display: block;
-    position: absolute;
-    left: 22px;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
-  }
-  
-  .logo img {
-    max-height: 50px;
-  }
-  
-  .main_menu {
-    list-style-type: none;
-    margin: 0px;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .main_menu > li {
-    display: block;
-    position: relative;
-    padding-top: 20px;  
-    padding-bottom: 20px; 
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-  
-  .main_menu > li > a {
-    font-family: Montserrat-Regular;
-    font-size: 15px;
-    color: #333333;
-    padding: 0;
-    border-bottom: 1px solid transparent;
-  }
-  li.sale-noti > a {
-    color: #e65540;
-  }
-  
-  .main_menu > li:hover > a {
-    text-decoration: none;
-    border-bottom: 1px solid #333333;
-  }
-  
-  .main_menu li {
-    position: relative;
-  }
-  
-  .wrap-slick2 {
-    position: relative;
-    margin-right: -15px;
-    margin-left: -15px;
-  }
-  .swal-overlay {
-      overflow-y: auto;
-  }
-  
-  .swal-icon--success {
-      border-color: #66a8a6;
-  }
-  
-  .swal-icon--success__line {
-      background-color: #66a8a6;
-  }
-  
-  .swal-icon--success__ring {
-      border: 4px solid rgba(102, 168, 166, 0.2);
-  }
-  .swal-button {
-      background-color: #e65540;
-      font-family: Montserrat-Regular;
-      font-size: 15px;
-      color: white;
-      text-transform: uppercase;
-      font-weight: unset;
-      border-radius: 20px;
-      -webkit-transition: all 0.3s;
-      -o-transition: all 0.3s;
-      -moz-transition: all 0.3s;
-      transition: all 0.3s;
-  }
-  .swal-button:hover {
-      background-color: #333333;
-  }
-  .swal-button:active {
-      background-color: #e65540;
-  }
-  .block2-labelnew::before {
-    background-color: #66a8a6;
-    content: 'New';
-  }
-  .block2-overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: rgba(0,0,0,0.3);
-    opacity: 0;
-  }
-  .block2-btn-addcart {
-    position: absolute;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-    -moz-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    -o-transform: translateX(-50%);
-    transform: translateX(-50%);
-    bottom: -45px;
-  }
-  .block2-btn-addwishlist:hover {
-    color: white;
-  }
-  .block2-overlay:hover {
-    opacity: 1;
-  }
-  .block2-overlay:hover .block2-btn-addcart {
-    bottom: 20px;
-  }
-  
-  
+body{margin-top:20px;
+    background:#eee;
+}
+/* E-commerce */
+.product-box {
+  padding: 0;
+  border: 1px solid #e7eaec;
+}
+.product-box:hover,
+.product-box.active {
+  border: 1px solid transparent;
+  -webkit-box-shadow: 0 3px 7px 0 #a8a8a8;
+  -moz-box-shadow: 0 3px 7px 0 #a8a8a8;
+  box-shadow: 0 3px 7px 0 #a8a8a8;
+}
+.product-imitation {
+  text-align: center;
+  padding: 90px 0;
+  background-color: #f8f8f9;
+  color: #bebec3;
+  font-weight: 600;
+}
+.cart-product-imitation {
+  text-align: center;
+  padding-top: 30px;
+  height: 80px;
+  width: 80px;
+  background-color: #f8f8f9;
+}
+.product-imitation.xl {
+  padding: 120px 0;
+}
+.product-desc {
+  padding: 20px;
+  position: relative;
+}
+.ecommerce .tag-list {
+  padding: 0;
+}
+.ecommerce .fa-star {
+  color: #d1dade;
+}
+.ecommerce .fa-star.active {
+  color: #f8ac59;
+}
+.ecommerce .note-editor {
+  border: 1px solid #e7eaec;
+}
+table.shoping-cart-table {
+  margin-bottom: 0;
+}
+table.shoping-cart-table tr td {
+  border: none;
+  text-align: right;
+}
+table.shoping-cart-table tr td.desc,
+table.shoping-cart-table tr td:first-child {
+  text-align: left;
+}
+table.shoping-cart-table tr td:last-child {
+  width: 80px;
+}
+.product-name {
+  font-size: 16px;
+  font-weight: 600;
+  color: #676a6c;
+  display: block;
+  margin: 2px 0 5px 0;
+}
+.product-name:hover,
+.product-name:focus {
+  color: #1ab394;
+}
+.product-price {
+  font-size: 14px;
+  font-weight: 600;
+  color: #ffffff;
+  background-color: #1ab394;
+  padding: 6px 12px;
+  position: absolute;
+  top: -32px;
+  right: 0;
+}
+.product-detail .ibox-content {
+  padding: 30px 30px 50px 30px;
+}
+.image-imitation {
+  background-color: #f8f8f9;
+  text-align: center;
+  padding: 200px 0;
+}
+.product-main-price small {
+  font-size: 10px;
+}
+.product-images {
+  margin: 0 20px;
+}
+
+.ibox {
+  clear: both;
+  margin-bottom: 25px;
+  margin-top: 0;
+  padding: 0;
+}
+.ibox.collapsed .ibox-content {
+  display: none;
+}
+.ibox.collapsed .fa.fa-chevron-up:before {
+  content: "\f078";
+}
+.ibox.collapsed .fa.fa-chevron-down:before {
+  content: "\f077";
+}
+.ibox:after,
+.ibox:before {
+  display: table;
+}
+.ibox-title {
+  -moz-border-bottom-colors: none;
+  -moz-border-left-colors: none;
+  -moz-border-right-colors: none;
+  -moz-border-top-colors: none;
+  background-color: #ffffff;
+  border-color: #e7eaec;
+  border-image: none;
+  border-style: solid solid none;
+  border-width: 3px 0 0;
+  color: inherit;
+  margin-bottom: 0;
+  padding: 14px 15px 7px;
+  min-height: 48px;
+}
+.ibox-content {
+  background-color: #ffffff;
+  color: inherit;
+  padding: 15px 20px 20px 20px;
+  border-color: #e7eaec;
+  border-image: none;
+  border-style: solid solid none;
+  border-width: 1px 0;
+}
+.ibox-footer {
+  color: inherit;
+  border-top: 1px solid #e7eaec;
+  font-size: 90%;
+  background: #ffffff;
+  padding: 10px 15px;
+}
