--- a/src/app/components/customer-form/customer-form.component.html
+++ b/src/app/components/customer-form/customer-form.component.html
@@ -5,7 +5,7 @@
       <div class="form-group">
           <label for="fname">First Name</label>
           <input type="text" class="form-control" id="fname" required
-          [(ngModel)]="model.firstName" name="fname" #firstname="ngModel">
+          [(ngModel)]="model.firstName" name="firstName" #firstname="ngModel">
           <div *ngIf="!firstname?.valid && (firstname?.dirty ||firstname?.touched)" class="alert alert-danger">
             <div [hidden]="!firstname.errors.required">
             First Name is required
@@ -15,7 +15,7 @@
         <div class="form-group">
             <label for="lastname"> Last Name</label>
             <input type="text" class="form-control" id="lastname" required
-              [(ngModel)]="model.lastName" name="lastname" #lastname="ngModel">
+              [(ngModel)]="model.lastName" name="lastName" #lastname="ngModel">
             <div *ngIf="!lastname?.valid && (lastname?.dirty ||lastname?.touched)" 
             class="alert alert-danger">
               <div [hidden]="!lastname.errors.required">
@@ -40,7 +40,7 @@
               <div class="form-group">
                   <label for="phone"> Phone Number</label>
                   <input type="number" class="form-control" id="phone" required
-                    [(ngModel)]="model.phoneNumber" name="phone" #phoneNo="ngModel"
+                    [(ngModel)]="model.phoneNo" name="phoneNo" #phoneNo="ngModel"
                     pattern="[789][0-9]{9}">
               </div>
               <div  *ngIf="phoneNo.errors && phoneNo?.errors.pattern">
@@ -49,8 +49,8 @@
            <div class="form-group">
              <label class="label label-default">
                  Gender: </label>  
-                 <label class="radio-inline"><input type="radio" name="optradio" checked="checked">Male</label>
-                 <label class="radio-inline"><input type="radio" name="optradio">Female</label>
+                 <label class="radio-inline"><input type="radio" name="radio" [(ngModel)]="Male" checked="checked">Male</label>
+                 <label class="radio-inline"><input type="radio" name="radio"  [(ngModel)]="Female"> Female</label>
              </div>
             
              <div>
@@ -62,33 +62,23 @@
 
              
         
-                <select class="form-control-inline" name="district">
+                 <select class="form-control-inline" name="district">
                         <option value="" disabled selected>District</option>
                         <option value=""> </option> 
-                 </select>
+                 </select> 
         
                 <select class=" form-control-inline" name="locallevel">
                             <option value="" disabled selected>Local Level</option>
                             <option value=""></option>
-                     </select>
+                     </select>  
                 
-            </div>
+            </div> 
             &nbsp;
              
-            
-             <!-- <div class="form-group">
-                <label for="address">Address</label>
-                <input type="text" class="form-control" id="address"
-                [(ngModel)]="model.address" name="address">
-            </div> -->
-
-
-
-
             <div class="form-group">
                 <label for="uname">User Name</label>
                 <input type="text" class="form-control" id="uname" required
-                [(ngModel)]="model.userName" name="uname" #userName="ngModel">
+                [(ngModel)]="model.username" name="username" #userName="ngModel">
                 <div *ngIf="!userName?.valid && (userName?.dirty ||userName?.touched)" class="alert alert-danger">
                   <div [hidden]="!userName.errors.required">
                  User name must be provided      
